--- a/assets/base.css
+++ b/assets/base.css
@@ -8,7 +8,7 @@ body {
 	margin: 0;
 	font-weight: 300;
 	color: var(--darker);
-	background-color: #eee;
+	background-color: var(--lighter);
 	height: 100%;
 }
 
