--- a/assets/base.css
+++ b/assets/base.css
@@ -7,8 +7,8 @@ html,
 body {
 	margin: 0;
 	font-weight: 300;
-	color: var(--darker);
-	background-color: var(--lighter);
+	color: var(--dark);
+	background-color: var(--light);
 }
 
 img {
@@ -18,7 +18,7 @@ img {
 
 button,
 input {
-	color: var(--darker);
+	color: var(--dark);
 }
 
 .sr-only:not(:focus):not(:active) {
@@ -32,5 +32,15 @@ input {
 }
 
 a svg {
-	color: var(--darker);
+	color: var(--dark);
+}
+
+input {
+	border: solid 2px var(--dark);
+	background-color: transparent;
+	border-radius: 0;
+}
+
+input:focus {
+	background-color: white;
 }
