--- a/assets/utils.css
+++ b/assets/utils.css
@@ -1,11 +1,17 @@
+.box,
+.button {
+	padding: 3em 2em;
+	box-shadow: -6px 8px 0 1px var(--dark);
+	border: 2px solid var(--dark);
+}
+
 .button {
 	display: inline-block;
 	padding: 0.75em 1.5em;
+	background-color: transparent;
 	color: var(--dark);
 	font-weight: bold;
 	text-decoration: none;
-	box-shadow: -6px 8px 0 1px var(--dark);
-	border: 2px solid var(--dark);
 	transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
 	cursor: pointer;
 }
