Results page styles

--- a/assets/utils.css
+++ b/assets/utils.css
@@ -8,7 +8,7 @@
 .button {
 	display: inline-block;
 	padding: 0.75em 1.5em;
-	background-color: transparent;
+	background-color: var(--light);
 	color: var(--dark);
 	font-weight: bold;
 	text-decoration: none;
@@ -20,4 +20,11 @@
 	background-color: white;
 	transform: translateY(-1px);
 	box-shadow: -8px 10px 0 2px var(--dark);
+}
+
+.cen {
+	place-items: center;
+	place-self: center;
+	text-align: center;
+	margin-inline: auto;
 }
