--- a/assets/utils.css
+++ b/assets/utils.css
@@ -1,6 +1,17 @@
+.backdrop {
+	position: fixed;
+	inset: 0;
+	z-index: 1;
+	display: grid;
+	place-content: center;
+	background-color: #222c;
+	padding: 1em;
+}
+
 .box,
 .button {
-	padding: 3em 2em;
+	padding: 2em;
+	background-color: var(--light);
 	box-shadow: -6px 8px 0 1px var(--dark);
 	border: 2px solid var(--dark);
 }
@@ -8,7 +19,6 @@
 .button {
 	display: inline-block;
 	padding: 0.75em 1.5em;
-	background-color: var(--light);
 	color: var(--dark);
 	font-weight: bold;
 	text-decoration: none;
@@ -27,4 +37,23 @@
 	place-self: center;
 	text-align: center;
 	margin-inline: auto;
+}
+
+.grid {
+	display: grid;
+	gap: 2em;
+	margin-top: 1em;
+	margin-bottom: 3em;
+}
+
+@media (min-width: 700px) {
+	.grid {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media (min-width: 1000px) {
+	.grid {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
 }
