--- a/assets/base.css
+++ b/assets/base.css
@@ -34,6 +34,11 @@ button {
 	color: var(--dark);
 }
 
+[aria-current='page'] {
+	font-weight: bold;
+	text-decoration: none;
+}
+
 h1 {
 	font-size: 2em;
 }
