--- a/assets/utils.css
+++ b/assets/utils.css
@@ -53,11 +53,13 @@
 	grid-area: one;
 	display: grid;
 	grid-auto-flow: column;
+	overflow: hidden;
 }
 
 .card-image {
-	background-size: cover;
-	background-position: center;
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
 }
 
 .card-title {
@@ -83,15 +85,22 @@
 
 .close {
 	position: absolute;
-	top: 0.5em;
-	right: 1em;
+	top: 0.75em;
+	right: 0.75em;
 	border: 0;
-	padding: 0.5em;
+	padding: 0.1em 0.5em;
+	border-radius: var(--radius);
+	cursor: pointer;
+	transition: transform 0.15s;
 }
 
 .close::before {
 	content: '×';
 	font-size: xx-large;
+}
+
+.close:hover {
+	transform: scale(1.25);
 }
 
 .grid {
