--- a/assets/utils.css
+++ b/assets/utils.css
@@ -32,7 +32,7 @@
 
 .button:hover,
 .card:hover {
-	background-color: white;
+	background-color: var(--lighter);
 	transform: translateY(-1px);
 	box-shadow: -8px 10px 0 2px var(--dark);
 }
@@ -73,7 +73,7 @@
 }
 
 .card:hover .card-title {
-	background-color: white;
+	background-color: var(--lighter);
 }
 
 .cen {
