--- a/assets/base.css
+++ b/assets/base.css
@@ -49,7 +49,7 @@ input {
 	color: var(--dark);
 	border: solid 2px currentColor;
 	background-color: transparent;
-	border-radius: 0.5em;
+	border-radius: var(--radius);
 	overflow: hidden;
 }
 
