--- a/assets/variables.css
+++ b/assets/variables.css
@@ -3,15 +3,5 @@ body {
 	--mid: #999;
 	--light: #eee;
 	--lighter: #fff;
-	--radius: 0.4em;
+	--radius: 0.4rem;
 }
-
-/* @media (prefers-color-scheme: dark) {
-	body {
-		--dark: #000;
-		--mid: #5a5a5a;
-		--light: #757575;
-		--lighter: #959595;
-		--radius: 0.4em;
-	}
-} */
