Account improvements with website

--- a/assets/base.css
+++ b/assets/base.css
@@ -35,8 +35,19 @@ button {
 }
 
 [aria-current='page'] {
-	font-weight: 500;
+	font-weight: var(--bold);
 	text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label,
+legend {
+	font-weight: var(--bold);
 }
 
 h1 {
@@ -45,7 +56,7 @@ h1 {
 
 input {
 	padding: 0.75em;
-	font-weight: 500;
+	font-weight: var(--bold);
 	color: var(--dark);
 	border: solid 2px currentColor;
 	background-color: transparent;
@@ -65,8 +76,12 @@ input:focus {
 	vertical-align: text-bottom;
 }
 
+label:has([type='radio']) {
+	font-weight: inherit;
+}
+
 label:has(:checked) {
-	font-weight: 500;
+	font-weight: var(--bold);
 }
 
 a:has(svg) {
