--- a/assets/utils.css
+++ b/assets/utils.css
@@ -44,6 +44,7 @@
 .card {
 	aspect-ratio: 16 / 9;
 	display: grid;
+	grid-template: 1fr / 1fr;
 	grid-template-areas: 'one';
 	padding: 0;
 	text-decoration: none;
