--- a/assets/utils.css
+++ b/assets/utils.css
@@ -50,41 +50,41 @@
 	text-decoration: none;
 }
 
-.card-images {
+.cardImages {
 	grid-area: one;
 	display: grid;
 	grid-auto-flow: column;
 	overflow: hidden;
 }
 
-.card-image {
+.cardImage {
 	height: 100%;
 	width: 100%;
 	object-fit: cover;
 }
 
-.card-title,
-.card-edit {
+.cardTitle,
+.cardEdit {
 	grid-area: one;
 	background-color: var(--light);
 	padding: 0.5em 1em;
 	transition: background-color 0.3s;
 }
 
-.card-title {
+.cardTitle {
 	justify-self: start;
 	align-self: end;
 	border-top-right-radius: var(--radius);
 }
 
-.card-edit {
+.cardEdit {
 	justify-self: end;
 	align-self: start;
 	border-bottom-left-radius: var(--radius);
 	text-decoration: none;
 }
 
-.card:hover .card-title {
+.card:hover .cardTitle {
 	background-color: var(--lighter);
 }
 
