--- a/assets/base.css
+++ b/assets/base.css
@@ -54,7 +54,8 @@ h1 {
 	font-size: 2em;
 }
 
-input {
+input,
+textarea {
 	padding: 0.75em;
 	font-weight: var(--bold);
 	color: var(--dark);
@@ -64,7 +65,8 @@ input {
 	overflow: hidden;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
 	background-color: var(--lighter);
 	outline: none;
 }
