--- a/assets/utils.css
+++ b/assets/utils.css
@@ -135,3 +135,13 @@
 		grid-template-columns: 1fr 1fr 1fr;
 	}
 }
+
+.screenReaderOnly:not(:focus):not(:active) {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
