--- a/assets/variables.css
+++ b/assets/variables.css
@@ -1,8 +1,8 @@
 body {
 	--dark: #222;
-	--mid: #999;
-	--light: #eee;
-	--lighter: #fff;
+	--light: #bbb;
+	--lighter: #eee;
+	--lightest: #fff;
 	--radius: 0.4rem;
 	--bold: 500;
 }
