--- a/assets/modern-normalize.css
+++ b/assets/modern-normalize.css
@@ -40,9 +40,17 @@ Sections
 
 body {
 	margin: 0; /* 1 */
-	font-family: 'Avenir', system-ui, -apple-system,
-		/* Firefox supports this but not yet `system-ui` */ 'Segoe UI', Roboto,
-		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'; /* 2 */
+	font-family:
+		'Avenir',
+		system-ui,
+		-apple-system,
+		/* Firefox supports this but not yet `system-ui` */ 'Segoe UI',
+		Roboto,
+		Helvetica,
+		Arial,
+		sans-serif,
+		'Apple Color Emoji',
+		'Segoe UI Emoji'; /* 2 */
 }
 
 /*
