--- a/assets/utils.css
+++ b/assets/utils.css
@@ -25,7 +25,10 @@
 	color: var(--dark);
 	font-weight: bold;
 	text-decoration: none;
-	transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
+	transition:
+		transform 0.3s,
+		box-shadow 0.3s,
+		background-color 0.3s;
 	cursor: pointer;
 	overflow: hidden;
 }
