--- a/assets/utils.css
+++ b/assets/utils.css
@@ -56,7 +56,7 @@
 	grid-template-areas: 'one';
 	padding: 0;
 	text-decoration: none;
-	background-color: var(--light);
+	background-color: var(--blue);
 }
 
 .cardImages {
@@ -76,8 +76,12 @@
 .cardEdit {
 	grid-area: one;
 	background-color: var(--lighter);
-	padding: 0.5em 1em;
+	padding: 0.5em 1em 0.25em;
 	transition: background-color 0.3s;
+}
+
+.cardEditIcon {
+	width: 1.5em;
 }
 
 .cardTitle {
