remove image credit limit

--- a/assets/utils.css
+++ b/assets/utils.css
@@ -70,6 +70,11 @@
 	height: 100%;
 	width: 100%;
 	object-fit: cover;
+	border-right: 1px solid var(--dark);
+}
+
+.cardImage:last-child {
+	border-right: 0;
 }
 
 .cardTitle,
