--- a/app/assets/modern-normalize.css
+++ b/app/assets/modern-normalize.css
@@ -40,8 +40,9 @@ Sections
 
 body {
 	margin: 0; /* 1 */
-	font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro,
-		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'; /* 2 */
+	font-family:
+		Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif,
+		'Apple Color Emoji', 'Segoe UI Emoji'; /* 2 */
 }
 
 /*
@@ -90,8 +91,8 @@ code,
 kbd,
 samp,
 pre {
-	font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo,
-		monospace; /* 1 */
+	font-family:
+		ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace; /* 1 */
 	font-size: 1em; /* 2 */
 }
 
